--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <canvas class="webgl"></canvas>
-
+    <div id="loader">
+        <h1>Loading</h1>
+    </div>
     
     <script type="x-shader/x-vertex" id="vertexshaderCube">
         void main() {
